# smsly-shared

./: .env.microservices  .gitignore  Dockerfile  __init__.py  internal_auth.py
adapters/: __init__.py  base_adapter.py  sms_adapter.py
audit/: __init__.py  audit_events.py  (+1 more)
smsly-core/: README.md  pyproject.toml
smsly-core/smsly_core/: __init__.py  adapters.py  admin_client.py  api_keys.py  audit.py  auth_middleware.py  circuit_breaker.py  database.py  direct_access_protection.py  health.py  inter_service_metrics.py  internal_auth.py  ledger.py  messaging.py  metrics.py  middleware.py  otp.py  password.py  rate_limit.py  retry.py  security_headers.py  stalker_audit.py  trust_engine.py  whatsapp.py
smsly-core/smsly_core/admin_client/: __init__.py  billing.py  client.py  config.py  usage.py
smsly-core/smsly_core/audit/: __init__.py  event_types.py  hashing.py  logger.py  models.py
smsly-core/smsly_core/circuit_breaker/: __init__.py  breaker.py  decorators.py  models.py  registry.py
smsly-core/smsly_core/direct_access/: __init__.py  config.py  ip_utils.py  middleware.py  stats.py
smsly-core/smsly_core/http/: __init__.py  client.py  exceptions.py
smsly-core/smsly_core/inter_service_metrics/: __init__.py  decorators.py  instrumented_client.py  prometheus_definitions.py  recording.py  simple_metrics.py
smsly-core/smsly_core/internal_auth/: __init__.py  headers.py  models.py  nonce_cache.py  signature.py
smsly-core/smsly_core/messaging/: __init__.py  encoding.py  models.py  phone_utils.py  segmentation.py
smsly-core/smsly_core/otp/: __init__.py  generator.py  hashing.py  models.py  proof_token.py
smsly-core/smsly_core/password/: __init__.py  async_ops.py  hasher.py  sync_ops.py  utils.py
smsly-core/smsly_core/providers/: __init__.py  twilio.py  vonage.py
smsly-core/smsly_core/rate_limit/: __init__.py  in_memory.py  models.py  redis_limiter.py  sliding_window.py
smsly-core/smsly_core/retry/: __init__.py  backoff.py  circuit_breaker.py  exceptions.py
smsly-core/smsly_core/vault/: __init__.py  client.py
smsly-core/smsly_core/whatsapp/: __init__.py  models.py  session_manager.py  template_manager.py
smsly-core/tests/: test_core.py  test_direct_access.py
smsly-rust/smsly-core/: Cargo.toml
smsly-rust/smsly-core/src/: adapters.rs  database.rs  health.rs  lib.rs  metrics.rs
smsly-rust/smsly-services/: Cargo.toml
smsly-rust/smsly-services/src/: config.rs  internal_auth.rs  lib.rs
smsly-rust/smsly-services/src/adapters/: base_adapter.rs  mod.rs  sms_adapter.rs
smsly-rust/smsly-services/src/audit/: audit_events.rs  middleware.rs  mod.rs
smsly-rust/smsly-services/src/audit/frontend/: audit.ts
smsly-rust/smsly-services/src/auth/: inter_service.rs  mod.rs
smsly-rust/smsly-services/src/errors/: user_errors.rs
smsly-rust/smsly-services/src/logging/: exhaustive.rs
smsly-rust/smsly-services/src/middleware/: gateway_guard.rs  mod.rs
(+11 files in other folders)
