[project]
name = "smsly-core"
version = "0.1.1"
description = "Shared core library for SMSLYCLOUD microservices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "SMSLY Team", email = "team@smsly.cloud" }
]

dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smsly_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
