[package]
name = "smsly-services"
version = "0.1.0"
edition = "2021"

[dependencies]
smsly-core = { path = "../smsly-core" }
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp"] }
constant_time_eq = "0.3"
